# SimpleOrderMatchingEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  Requirements.md
include/: MatchingEngine.h  Types.h
src/: Dummy.cpp  LimitOrderQueue.h  MarketOrderQueue.h  Order.h  OrderBook.h  OrderQueue.h  Results.h  SimpleMatchingEngine.h
test/: OrderBookTest.cpp  OrderQueueTest.cpp  SimpleMatchingEngineTest.cpp  TestFixtures.h
